# Chess-App

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  open_vscode_in_wsl.bat
scripts/: install_SFML_linux_dependencies.sh  msvc_env.bat
src/: CMakeLists.txt  main.cpp
src/core/: BoardState.cpp  BoardState.h  CMakeLists.txt  EndOfGameChecker.cpp  EndOfGameChecker.h  Engine.cpp  Engine.h  Evaluate.cpp  Evaluate.h  King.cpp  King.h  Move.h  MoveGenerator.cpp  MoveGenerator.h  PieceBitBoards.cpp  PieceBitBoards.h  TranspositionTable.h
src/gui/: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  GameMenu.cpp  GameMenu.h  PieceTextures.cpp  PieceTextures.h  PiecesSprites.cpp  PiecesSprites.h
src/logger/: CMakeLists.txt  Logger.cpp  Logger.h
src/logic/: BoardPosition.cpp  BoardPosition.h  BoardState.cpp  BoardState.h  CMakeLists.txt  Pieces.cpp  Pieces.h
src/test/: CMakeLists.txt  test.cpp  test1.cpp
test/performance_tests/: CMakeLists.txt  enginePerformance.cpp
test/unit_tests/: CMakeLists.txt  movesGeneration.cpp
